src/smart-mirror/src/Clock/Clock.css
.ClockTime {
    font-weight: lighter;
    font-size: 6rem;
    margin-top: -1.8rem;
}

.ClockDay {
    font-weight: lighter;
    font-size: 3rem;
    margin-top: -0.8rem;
    text-align: left;
}

.ClockDate {
    font-weight: lighter;
    font-size: 2rem;
    margin-top: -0.5rem;
    text-align: left;
}

